--- a/resources/quickprint/materials/2_abs.ini
+++ b/resources/quickprint/materials/2_abs.ini
@@ -2,9 +2,8 @@
 name = ABS
 
 [profile]
-print_bed_temperature = 100
-platform_adhesion = Brim
-filament_flow = 107
-print_temperature = 250
-fan_speed = 50
-fan_speed_max = 50
+print_speed = 50
+print_temperature = 235
+infill_speed = 60.0
+inset0_speed = 40
+raft_airgap = 0.05
