--- a/resources/quickprint/materials/Pro_PLA.ini
+++ b/resources/quickprint/materials/Pro_PLA.ini
@@ -1,5 +1,5 @@
 [machine]
-machine_name = mostfun Pro_TPU
+machine_name = mostfun Pro_PLA
 machine_type = mostfun
 machine_width = 220
 machine_depth = 180
@@ -20,8 +20,8 @@ wall_thickness = 0.8
 retraction_enable = True
 solid_layer_thickness = 0.8
 fill_density = 20
-print_speed = 50
-print_temperature = 235
+print_speed = 80
+print_temperature = 205
 print_temperature2 = 0
 print_temperature3 = 0
 print_temperature4 = 0
@@ -53,9 +53,9 @@ object_sink = 0.0
 overlap_dual = 0.15
 travel_speed = 100.0
 bottom_layer_speed = 20
-infill_speed = 60.0
+infill_speed = 0.0
 solidarea_speed = 0.0
-inset0_speed = 40
+inset0_speed = 50
 insetx_speed = 0.0
 cool_min_layer_time = 5
 fan_enabled = True
@@ -70,7 +70,7 @@ cool_head_lift = False
 solid_top = True
 solid_bottom = True
 fill_overlap = 15
-perimeter_before_infill = True
+perimeter_before_infill = False
 support_type = Grid
 support_angle = 45
 support_fill_rate = 15
@@ -86,7 +86,7 @@ raft_base_linewidth = 1.2
 raft_interface_thickness = 0.15
 raft_interface_linewidth = 0.6
 raft_airgap_all = 0
-raft_airgap = 0.05
+raft_airgap = 0.10
 raft_surface_layers = 1
 raft_surface_thickness = 0.27
 raft_surface_linewidth = 0.4
@@ -117,13 +117,13 @@ start.gcode = ;Sliced at: {day} {date} {time}
 	G1 F200 E3              ;extrude 3mm of feed stock
 	G92 E-2                   ;zero the extruded length again
 	G91
-	G1 X-10 Y-10 E-2 F4800
-	G1 X10 Y10
-	G1 X-10 Y-10
-	G1 X10 Y10
-	G1 X-10 Y-10
-	G1 X10 Y10
-	G1 X-10 Y-10 E-1
+	G1 X-5 Y-5 E-2 F3600
+	G1 X5 Y5
+	G1 X-5 Y-5
+	G1 X5 Y5
+	G1 X-5 Y-5
+	G1 X5 Y5
+	G1 X-5 Y-5 E-1
 	G90
 	G1 X160 Y0 Z0.3 F6000
 	G1 E0
