--- a/resources/quickprint/materials/Pro_TPU.ini
+++ b/resources/quickprint/materials/Pro_TPU.ini
@@ -70,7 +70,7 @@ cool_head_lift = False
 solid_top = True
 solid_bottom = True
 fill_overlap = 15
-perimeter_before_infill = True
+perimeter_before_infill = False
 support_type = Grid
 support_angle = 45
 support_fill_rate = 15
@@ -117,13 +117,13 @@ start.gcode = ;Sliced at: {day} {date} {time}
 	G1 F200 E3              ;extrude 3mm of feed stock
 	G92 E-2                   ;zero the extruded length again
 	G91
-	G1 X-10 Y-10 E-2 F4800
-	G1 X10 Y10
-	G1 X-10 Y-10
-	G1 X10 Y10
-	G1 X-10 Y-10
-	G1 X10 Y10
-	G1 X-10 Y-10 E-1
+	G1 X-5 Y-5 E-2 F3600
+	G1 X5 Y5
+	G1 X-5 Y-5
+	G1 X5 Y5
+	G1 X-5 Y-5
+	G1 X5 Y5
+	G1 X-5 Y-5 E-1
 	G90
 	G1 X160 Y0 Z0.3 F6000
 	G1 E0
